Updated http tests
